# infembed

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
data/_core/: agnews.py  imagenet.py  tinystories.py  toy.py  train_tinystories_tokenizer.py
data/_core/tinystories_tokenizer/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
data/_utils/: binary_multitask_llm.py  cb_llm.py  character_tokenizer.py  common.py  llm.py
data/data/_core/: spotcheck.py  tinystories.py
data/data/_utils/: common.py  llm_collate_fns.py
examples/: .gitignore
examples/.ipynb_checkpoints/: imagenet-checkpoint.ipynb
examples/agnews/: agnews_case_study.ipynb
examples/imagenet/: .gitignore  get_imagenet.sh  helpers.py  imagenet_case_study_fast_kfac.ipynb  imagenet_debugging.ipynb  imagenet_load_embeddings.ipynb
examples/spotcheck/: spotcheck_case_study.ipynb
examples/tinystories/: tinystories_load_embeddings.ipynb  yc_demo_clustering.ipynb
examples/tinystories_cb/: cb_explanation_and_fixing.ipynb  display_concept_predictions.ipynb  yc_demo.ipynb
infembed/: .gitignore
infembed/cluster/_core/: cluster_base.py  rule_cluster.py  sklean_cluster.py  sklearn_cluster.py
infembed/clusterer/_core/: faiss_clusterer.py  rule_clusterer.py  sklearn_clusterer.py
infembed/clusterer/_utils/: common.py
infembed/embed/_core/: kfac_embedder.py
infembed/embed/_utils/: common.py  hvp.py
infembed/embedder/_core/: arnoldi_embedder.py  dim_reduct_embedder.py  fast_kfac_embedder.py  gradient_embedder.py  kfac_embedder.py  naive_embedder.py
infembed/embedder/_utils/: common.py  gradient.py  hvp.py  kfac.py  progress.py  sample_gradient.py
infembed/examples/: .gitignore
infembed/examples/agnews/: agnews_case_study.ipynb
infembed/examples/imagenet/: imagenet_case_study.ipynb  imagenet_load_embeddings.ipynb
infembed/examples/toy_example/: toy_example_case_study.ipynb
infembed/scripts/evaluate/: helpers.py
infembed/scripts/run_embedder/: run_embedder.py
infembed/utils/: common.py
infembed/visualization/_core/: common.py
infembed/viz/_core/: common.py
models/_core/: agnews.py  binary_multitask_decoder_llm.py  cb_decoder_llm.py  decoder_llm.py  spotcheck.py  toy.py
models/_utils/: binary_multitask_llm.py  callbacks.py  cb_llm.py  common.py  llm.py
models/models/_core/: spotcheck.py
models/models/_utils/: common.py
scripts/: helpers.py
scripts/lightning_predict/: helpers.py  lightning_predict.py
scripts/lightning_predict/conf/: imagenet.yaml  shakespeare.yaml  shakespeare_medium.yaml  spotcheck.yaml  (+2 more)
scripts/lightning_train/: lightning_train.py  lightning_train_wandb.py  profile.txt
scripts/misc/: .gitignore  try_multi_gpu.py  try_tinystories_multi_gpu.py
scripts/run_embedder/: run_embedder.py
tests/utils/: common.py
(+137 files in other folders)
